--- a/src/main/resources/db/postgres.properties
+++ b/src/main/resources/db/postgres.properties
@@ -2,6 +2,7 @@
 #database.username=wegxlfzjjgxaxy
 #database.password=SSQyKKE_e93kiUCR-ehzMcKCxZ
 
+database.driverClassName=org.postgresql.Driver
 database.url=jdbc:postgresql://localhost:5433/topjava
 database.username=user
 database.password=password
